# hs-configuration-tools

./: .gitignore  .travis.yml  CHANGELOG.md  INSTALL_ON_WINDOWS.md  README.md  Setup.hs  cabal.project  configuration-tools.cabal  constraints  constraints-ghc-8.0.1  constraints.old-transformers  stack.yaml
.github/workflows/: cabal-ci.yaml  stack-ci.yaml
examples/: Example.hs  Trivial.hs
src/Configuration/: Utils.hs
src/Configuration/Utils/: CommandLine.hs  ConfigFile.hs  FromJsonWithDef.hs  Http.hs  HttpsCertPolicy.hs  Internal.hs  Maybe.hs  Monoid.hs  Operators.hs  Setup.hs  Validation.hs
src/Configuration/Utils/Internal/: ConfigFileReader.hs  HttpsCertPolicy.hs  JsonTools.hs
test/: TestExample.hs  TestTools.hs
test/Tests/: BoolOption.hs  MonoidConfig.hs
